modified style and index files, write new in line

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   <body>
     <!-- navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo"
-        >Wisnawa <span>Oneline Coffee Store</span></a
-      >
+      <a href="#" class="navbar-logo">Wisnawa<span>Coffee Store</span></a>
       <div class="navbar-nav">
         <a href="#">Home</a>
         <a href="#about">Tentang Kami</a>
@@ -40,5 +38,7 @@
     <script>
       feather.replace();
     </script>
+    <!-- my js -->
+    <script src="js/script.js"></script>
   </body>
 </html>
