--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <body>
     <!-- navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Wisnawa<span>Coffee Store</span></a>
+      <a href="#" class="navbar-logo">Wisnawa<span>Coffee shop</span></a>
       <div class="navbar-nav">
         <a href="#">Home</a>
-        <a href="#about">Tentang Kami</a>
+        <a href="#about" id="nav-longx">Tentang Kami</a>
         <a href="#menu">Menu</a>
         <a href="#contact">Kontak</a>
       </div>
