--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <body>
     <!-- navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Wisnawa<span>Coffee shop</span></a>
+      <a href="#" class="navbar-logo">Wisnawa&nbsp;<span>Coffee shop</span></a>
       <div class="navbar-nav">
-        <a href="#">Home</a>
+        <a href="#home">Home</a>
         <a href="#about" id="nav-longx">Tentang Kami</a>
         <a href="#menu">Menu</a>
         <a href="#contact">Kontak</a>
@@ -34,6 +34,18 @@
       </div>
     </nav>
     <!-- navbar end -->
+    <!-- hero start -->
+    <section id="home" class="hero">
+      <main class="content">
+        <h1>Fresh&nbsp;<span>Coffee</span></h1>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis,
+          itaque.
+        </p>
+        <a href="#" class="cta">Add To Cart</a>
+      </main>
+    </section>
+    <!-- hero end -->
     <!-- feather icons -->
     <script>
       feather.replace();
