modified style and index, write in line about section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,32 @@
       </main>
     </section>
     <!-- hero end -->
+    <!-- about start -->
+    <section id="about" class="about">
+      <h2>About&nbsp;<span>Our Brands</span></h2>
+      <div class="row">
+        <div class="about-img">
+          <img
+            src="img/brand1.jpg"
+            alt="https://unsplash.com/photos/c2Y16tC3yO8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+          />
+        </div>
+        <div class="content">
+          <h3>Coffee Luxe</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+            minima vero perspiciatis quasi enim? Saepe, laudantium blanditiis?
+          </p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius,
+            perspiciatis ducimus sed amet et provident saepe atque illum in
+            pariatur beatae blanditiis dolores fugit consequatur quasi magni
+            nostrum voluptatibus eveniet.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- about end -->
     <!-- feather icons -->
     <script>
       feather.replace();
