created style and index files, write in line menu section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,63 @@
       </div>
     </section>
     <!-- about end -->
+    <!-- menu start -->
+    <section id="menu" class="menu">
+      <h2>Shop&nbsp;<span>By Category</span></h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum magni
+        voluptas libero error, aliquam repudiandae? Lorem ipsum dolor sit amet
+        consectetur adipisicing.
+      </p>
+      <div class="row">
+        <div class="menu-card">
+          <img
+            src="img-menu/11-imagelist.jpg"
+            alt="coffe with milk"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">Coffee Latte</h3>
+          <p class="menu-card-price">IDR 78K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img-menu/12-imagelist.jpg"
+            alt="Mocha Latte Coffee"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">Mocha Latte Coffee</h3>
+          <p class="menu-card-price">IDR 78K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img-menu/13-imagelist.jpg"
+            alt="Irish Coffee"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">Irish Coffee</h3>
+          <p class="menu-card-price">IDR 78K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img-menu/14-imagelist.jpg"
+            alt="Cold Brew Coffee"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">Cold Brew Coffee</h3>
+          <p class="menu-card-price">IDR 78K</p>
+        </div>
+        <div class="menu-card">
+          <img
+            src="img-menu/15-imagelist.jpg"
+            alt="Cappuccino"
+            class="menu-card-img"
+          />
+          <h3 class="menu-card-title">Cappuccino</h3>
+          <p class="menu-card-price">IDR 78K</p>
+        </div>
+      </div>
+    </section>
+    <!-- menu end -->
     <!-- feather icons -->
     <script>
       feather.replace();
