modified style and index files, write in line code

--- a/index.html
+++ b/index.html
@@ -129,6 +129,42 @@
       </div>
     </section>
     <!-- menu end -->
+    <!-- contact start -->
+    <section id="contact" class="contact">
+      <h2>Contact&nbsp;<span>Us</span></h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum magni
+      </p>
+      <div class="row">
+        <!-- google map -->
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63113.83346502374!2d115.21162793671172!3d-8.63294736176944!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23f9a3d912629%3A0xb5a8edad32c0e774!2sKec.%20Denpasar%20Tim.%2C%20Kota%20Denpasar%2C%20Bali!5e0!3m2!1sid!2sid!4v1674899663547!5m2!1sid!2sid"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+          class="map"
+        ></iframe>
+        <form action="">
+          <div class="input-group">
+            <i data-feather="user"></i>
+            <input type="text" placeholder="Name" />
+          </div>
+          <div class="input-group">
+            <i data-feather="mail"></i>
+            <input type="email" placeholder="Your Email Address" />
+          </div>
+          <div class="input-group">
+            <i data-feather="phone"></i>
+            <input type="number" placeholder="Your Phone Number" />
+          </div>
+          <button type="submit" class="btn">Kirim Pesan</button>
+        </form>
+      </div>
+    </section>
+    <!-- contact end -->
+    <!-- footer start -->
+    <footer></footer>
+    <!-- footer end -->
     <!-- feather icons -->
     <script>
       feather.replace();
