modified sytle, index and znote files, write in line code

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#" class="navbar-logo">Wisnawa&nbsp;<span>Coffee shop</span></a>
       <div class="navbar-nav">
         <a href="#home">Home</a>
-        <a href="#about" id="nav-longx">Tentang Kami</a>
+        <a href="#about" id="nav-longx">About Us</a>
         <a href="#menu">Menu</a>
         <a href="#contact">Kontak</a>
       </div>
@@ -163,7 +163,22 @@
     </section>
     <!-- contact end -->
     <!-- footer start -->
-    <footer></footer>
+    <footer>
+      <div class="socials">
+        <a href=""><i data-feather="instagram"></i></a>
+        <a href=""><i data-feather="twitter"></i></a>
+        <a href=""><i data-feather="facebook"></i></a>
+      </div>
+      <div class="links">
+        <a href="#home">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Contact</a>
+      </div>
+      <div class="credit">
+        <p>Created by <a href="">Wisnawa</a>&nbsp;|&copy;&nbsp;2023</p>
+      </div>
+    </footer>
     <!-- footer end -->
     <!-- feather icons -->
     <script>
