--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
       </div>
+      <!-- seach form start -->
+      <div class="search-form">
+        <input type="search" id="search-box" placeholder="search here ..." />
+        <label for="search-box"><i data-feather="search"></i></label>
+        <!-- <a href="#" id="search"><i data-feather="search"></i></a> -->
+      </div>
+      <!-- seach form end -->
     </nav>
     <!-- navbar end -->
     <!-- hero start -->
